tests/error/equalsInteger-wrong-1st-argument-bool.uplc
(program 1.0.0[[(builtin equalsInteger)(con bool True)](con integer 10)])